--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "liveServer.settings.port": 5502,
     "cSpell.words": [
-        "ikechukwu"
+        "ikechukwu",
+        "Intresting",
+        "moviechoice",
+        "Nollywood",
+        "tictok"
     ]
 }
