--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "faliure",
         "ikechukwu",
+        "innerhtml",
         "Intresting",
         "moviechoice",
         "Nollywood",
