--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,6 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "command": "npm start",
             "name": "Run npm start",
@@ -20,7 +16,6 @@
             ],
             "program": "${workspaceFolder}/3object.js"
         },
-      
         {
             "type": "vscode-edge-devtools.debug",
             "name": "Open Edge DevTools",
@@ -29,6 +24,12 @@
             "presentation": {
                 "hidden": true
             }
+        },
+        {
+            "type": "node-terminal",
+            "name": "JavaScript Debug Terminal",
+            "request": "launch",
+            "cwd": "${workspaceFolder}"
         }
     ],
     "compounds": [
